--- a/blogpost.html
+++ b/blogpost.html
@@ -2,13 +2,14 @@
     <head>
         <title>El titulo del post </title>
         <link rel="stylesheet" href="css/estilos.css" />
-    </head>
-    
-
+    </head>    
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
-        <p>Voy a hacer otra modificación para ver qué pasa</p>
+       <div id="container">
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post<h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            </div>
+       </div>       
     </body>
 </html>
     
