dejamos de nuevo el proyecto como estaba, agregando el readme y eliminando una adición de ensayó del blogpost

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 
-        <title> Bienvenido a Hyperblog 2.3 es un blog del futuro . estamos haciendo este cambio para validar algo</title>
+        <title> Bienvenido a Hyperblog 2.3 es un blog del futuro.</title>
 
         <link rel="stylesheet" href="css/estilos.css" />
     </head>    
