cambio al tagline y color del footer :)

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
             <div id = "cabecera">
                 <img id="logo" src="imágenes/dragon.png" />
                 Hyperblog 
-                <span id="tagline"> Tu blog de cabeceraa</span>
+                <span id="tagline"> Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post<h1>
